# build-with-ai-2026

./: .env.example  .gitignore  README.md  demo.md  how_to_run.txt  pyproject.toml
mcp-toolbox/: tools.yaml
remote_agent/: __init__.py
remote_agent/finance_agent/: agent.py  tools.py
sql/bigquery/: 01_create_tables.sql  02_insert_test_data.sql
supply_chain_agent_demo/: agent.py
supply_chain_agent_demo/sub_agents/: __init__.py
supply_chain_agent_demo/sub_agents/document_intake/: agent.py
supply_chain_agent_demo/sub_agents/finance/: agent.py
supply_chain_agent_demo/sub_agents/inventory/: agent.py
supply_chain_agent_demo/sub_agents/logistics/: agent.py
